--- a/mainWindow.html
+++ b/mainWindow.html
@@ -3,77 +3,51 @@
 
 <head>
   <title>algebrarium</title>
-  <style>
-    #window {
-      width: 800px;
-      height: 600px;
-      display: inline-flex;
-      margin: -8px;
-    }
-    button {
-      background: 0%;
-      border: none;
-      padding: 0;
-      outline: none;
-      cursor: pointer;
-    }
-    button:active {
-      transform: translateY(3px);
-    }
-    .tool_selector {
-      width: 150px;
-      height: 100%;
-      background-color: #272C2A;
-      display: table;
-    }
-    .tool_selector #button_box {
-      display: table-cell;
-      vertical-align: middle;
-    }
-    .tool_selector button {
-      display: flex;
-      margin-left: auto;
-      margin-right: auto;
-    }
-    .tool_selector img {
-      margin-left: auto;
-      margin-right: auto;
-      width: 50%;
-      padding: 20px 0;
-      transition: width 0.15s ease-in-out;
-
-    }
-    .tool_selector img:hover {
-      width: 55%;
-      content: url(./assets/l_green.png);
-    }
-    .content_selector {
-      width: 200px;
-      height: 100%;
-      background-color: #3E4340;
-    }
-  </style>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
+  <script type="text/javascript" src="./frame.js"></script>
+  <link type="text/css" href="./frame.style.css" rel="stylesheet">
 </head>
 
 <body>
 
 <div id="window">
+
   <div class="tool_selector">
     <div id="button_box">
-      <button class="ico" href="#"><img src="./assets/d_green.png"></button>
-      <button class="ico" href="#"><img src="./assets/d_green.png"></button>
-      <button class="ico" href="#"><img src="./assets/d_green.png"></button>
+      <button class="ico" href="#">
+        <img src="./assets/d_green.png">
+      </button>
+      <button class="ico" href="#">
+        <img src="./assets/d_green.png">
+      </button>
+      <button class="ico" href="#">
+        <img src="./assets/d_green.png">
+      </button>
     </div>
   </div>
 
   <div class="content_selector">
+    <div class="content_chapter">
+      <a></a>
+      <box class="chapter_overlay"></box>
+      <ul>
+        <li id="content_title"></li>
+        <li id="content_title"></li>
+      </ul>
+    </div>
+    <div class="content_chapter">
+      <a></a>
+      <ul>
+        <li id="content_title"></li>
+      </lu>
+    </div>
   </div>
 
   <div class="content_area">
+
   </div>
+
 </div>
-
-
 </body>
-
 </html>
